[package]
name = "reth-filter-maps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Filter maps implementation for efficient log indexing (EIP-7745)"

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true

# reth
reth-errors.workspace = true

# misc
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
sha2.workspace = true
fnv.workspace = true

# codecs
reth-codecs = { workspace = true, optional = true }
modular-bitfield = { workspace = true, optional = true }

[dev-dependencies]
# For tests
alloy-consensus.workspace = true
proptest.workspace = true
arbitrary = { workspace = true, features = ["derive"] }
rand.workspace = true
test-fuzz.workspace = true

[features]
default = []
reth-codecs = ["dep:reth-codecs", "dep:modular-bitfield"]
test-utils = []

[profile.test]
features = ["test-utils"]